# pytorch_practice_repo

./: hello.py  pyproject.toml  trained_model.pkl
data/: MSFT_2m.csv
experimentation/: myFile.py
jnotebooks/: notebook001.ipynb  notebook002.ipynb  notebook003.ipynb  notebook004.ipynb
