[project]
name = "pytorch-practice-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtrader>=1.9.78.123",
    "ipykernel>=6.29.5",
    "itables>=2.2.4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "torch-utils>=0.1.2",
    "torchaudio>=2.5.1",
    "torchmetrics>=1.6.1",
    "torchvision>=0.20.1",
]
